--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "ai-chatbot",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "AI-powered chatbot using MERN Stack and GPT",
+  "main": "server.js",
   "scripts": {
+    "start": "node backend/server.js",
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "autoprefixer": "^10.4.20",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^6.1.0",
+    "next": "^15.0.1",
+    "openai": "^3.0.0",
+    "postcss": "^8.4.47",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.2.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "@types/react": "18.3.12",
+    "typescript": "5.6.3"
   }
 }
