--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.2.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
